--- a/52_Limpeza_de_dados,_outliers_e_valores_ausentes.ipynb
+++ b/52_Limpeza_de_dados,_outliers_e_valores_ausentes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMw5ECQjb1HIPRvbmY4N1vC",
+      "authorship_tag": "ABX9TyOEkT4yNSfZhOeD+b2Ryith",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4299,7 +4299,19 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## **Extra: Data Cleaning, outliers e valores ausentes**\n",
+        "\n",
+        "Esta é uma aula bônus da Escola de Data Science (EDS), liberada como material extra no curso Data Science na Prática.\n",
+        "\n",
+        "Nessa aula, o Rafael Duarte (da equipe Sigmoidal) aprofunda um pouco mais sobre a limpeza de dados, outliers e como lidar com valores ausentes em conjuntos de dados reais.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Escola de Data Science](https://escola.sigmoidal.ai/)"
+      ],
       "metadata": {
         "id": "M8x7_ouGx0PX"
       }
