--- a/53_Aula_Bonus.ipynb
+++ b/53_Aula_Bonus.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRkBeaTf/wFO+ds15nsL5t",
+      "authorship_tag": "ABX9TyPdX8pHrFHAVeHvXLRQBnu1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,10 @@
         "\n",
         "## **Aula com Thaissa Candella**\n",
         "\n",
-        "Perfil da Thaíssa no LinkedIn\n",
+        "[Perfil da Thaíssa no LinkedIn](https://www.linkedin.com/in/thaissacandella/?locale=en_US)\n",
         "\n",
-        "Perfil da Thaíssa no Instagram"
+        "\n",
+        "[Perfil da Thaíssa no Instagram](https://www.instagram.com/thaissacandella/)"
       ],
       "metadata": {
         "id": "YtqGMW4m65mD"
