--- a/53_Aula_Bonus.ipynb
+++ b/53_Aula_Bonus.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdX8pHrFHAVeHvXLRQBnu1",
+      "authorship_tag": "ABX9TyMKKaWXa+R8+BMuCqvdJyNy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,41 @@
       ],
       "metadata": {
         "id": "YtqGMW4m65mD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **LinkedIn 101 - Como se posicionar em inglês na internet**\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "How to Write a Perfect Resume - Priwoo\n",
+        "\n",
+        "Resume Formats - Priwoo\n",
+        "\n",
+        "Como Escrever o Currículo Perfeito\n",
+        "\n",
+        "Resume Templates - Resume Genius\n",
+        "\n",
+        "What Will Make You Stand Out on LinkedIn in 2021\n",
+        "\n",
+        "How to Use LinkedIn to Your Advantage - Forbes\n",
+        "\n",
+        "Template de Mensagens Para Novas Conexões no LinkedIn\n",
+        "\n",
+        "5 Rules for Asking LinkedIn Connections for Help (Templates)\n",
+        "\n",
+        "Templates for the Perfect Cover Letter - Harvard\n",
+        "\n",
+        "How to Write a Cover Letter - Zety\n",
+        "\n",
+        "How to Write the Perfect Cover Letter - Glassdoor\n",
+        "\n",
+        "Cover Letter Templates - Resume Genius"
+      ],
+      "metadata": {
+        "id": "3Oj8L6Xo-V_g"
       }
     },
     {
