--- a/53_Aula_Bonus.ipynb
+++ b/53_Aula_Bonus.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKKaWXa+R8+BMuCqvdJyNy",
+      "authorship_tag": "ABX9TyNdeqPCZDIRzlmWQ3jOMN+4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,13 +57,13 @@
         "\n",
         "Links úteis:\n",
         "\n",
-        "How to Write a Perfect Resume - Priwoo\n",
+        "[How to Write a Perfect Resume - Priwoo](https://priwoo.com/how-to-write-a-perfect-resume/)\n",
         "\n",
-        "Resume Formats - Priwoo\n",
+        "[Resume Formats - Priwoo](https://priwoo.com/blog/resume-formats/)\n",
         "\n",
-        "Como Escrever o Currículo Perfeito\n",
+        "[Como Escrever o Currículo Perfeito](https://www.estagiotrainee.com/curriculo)\n",
         "\n",
-        "Resume Templates - Resume Genius\n",
+        "[Resume Templates - Resume Genius](https://resumegenius.com/resume-samples)\n",
         "\n",
         "What Will Make You Stand Out on LinkedIn in 2021\n",
         "\n",
