--- a/53_Aula_Bonus.ipynb
+++ b/53_Aula_Bonus.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdeqPCZDIRzlmWQ3jOMN+4",
+      "authorship_tag": "ABX9TyMd7+ps5e3UEkl1J1BluUDY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,21 +65,21 @@
         "\n",
         "[Resume Templates - Resume Genius](https://resumegenius.com/resume-samples)\n",
         "\n",
-        "What Will Make You Stand Out on LinkedIn in 2021\n",
+        "[What Will Make You Stand Out on LinkedIn in 2021](https://www.semrush.com/blog/what-will-make-you-stand-out-on-linkedin-in-2020/)\n",
         "\n",
-        "How to Use LinkedIn to Your Advantage - Forbes\n",
+        "[How to Use LinkedIn to Your Advantage - Forbes](https://www.forbes.com/sites/ashleystahl/2020/01/29/how-to-use-linkedin-to-your-advantage-tips-to-build-career-success/?sh=668029cc4035)\n",
         "\n",
-        "Template de Mensagens Para Novas Conexões no LinkedIn\n",
+        "[Template de Mensagens Para Novas Conexões no LinkedIn](https://www.themuse.com/advice/want-people-to-accept-your-linkedin-requests-use-these-10-templates)\n",
         "\n",
-        "5 Rules for Asking LinkedIn Connections for Help (Templates)\n",
+        "[5 Rules for Asking LinkedIn Connections for Help ](https://www.themuse.com/advice/5-rules-for-asking-your-linkedin-connections-for-help)\n",
         "\n",
-        "Templates for the Perfect Cover Letter - Harvard\n",
+        "[Templates for the Perfect Cover Letter - Harvard](https://www.cnbc.com/2019/07/23/example-of-the-perfect-cover-letter-according-to-harvard-career-experts.html)\n",
         "\n",
-        "How to Write a Cover Letter - Zety\n",
+        "[How to Write a Cover Letter - Zety](https://zety.com/blog/how-to-write-a-cover-letter)\n",
         "\n",
-        "How to Write the Perfect Cover Letter - Glassdoor\n",
+        "[How to Write the Perfect Cover Letter - Glassdoor](ttps://www.glassdoor.com/blog/how-to-write-perfect-cover-letter/)\n",
         "\n",
-        "Cover Letter Templates - Resume Genius"
+        "[Cover Letter Templates - Resume Genius](https://resumegenius.com/cover-letter-examples)"
       ],
       "metadata": {
         "id": "3Oj8L6Xo-V_g"
