--- a/54_Introdução_à_Análise_de_Dados_para_Finanças.ipynb
+++ b/54_Introdução_à_Análise_de_Dados_para_Finanças.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8Cl9wiG3+c4+Cg5YbvqkW",
+      "authorship_tag": "ABX9TyPsUnO8RH+b9OGLh7UIUm2Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5870,12 +5870,12 @@
         "tickers.tickers['PETR4.SA'].actions"
       ],
       "metadata": {
-        "id": "2CUrWRjFrIe0",
-        "outputId": "e401fb83-4fd0-4672-d930-ad751c508792",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "2CUrWRjFrIe0",
+        "outputId": "e401fb83-4fd0-4672-d930-ad751c508792"
       },
       "execution_count": 27,
       "outputs": [
@@ -6469,6 +6469,65 @@
           "execution_count": 27
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ace\n",
+        "tickers.symbols"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S17vu1wxrRps",
+        "outputId": "14957b8b-45c2-43e2-d333-4e32bb22f9ca"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['BBAS3.SA', 'ITUB3.SA', 'PETR4.SA']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Bibliotecas para Análise Quantitativa\n",
+        "\n",
+        "Conheça as principais bibliotecas para análise de ativos, e que serão usadas para a construção do Dashboard."
+      ],
+      "metadata": {
+        "id": "dHR8zn6hrVor"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Portfolio Analytics for Quants (QuantStats)\n",
+        "\n",
+        "Essa é uma biblioteca para proceder com análises quantitativas, trazendo profundidade nas análises e métricas de risco.\n",
+        "\n",
+        "A biblioteca `quantstats` é composta de 3 módulos principais:\n",
+        "\n",
+        "1. `quantstats.stats` - para calcular várias métricas de perfomance, como Índice de Sharpe, Win rate, Volatilidade, etc.\n",
+        "\n",
+        "2. `quantstats.plots` - para visualizar performance, drawdowns, rolling statistics, monthly returns, entre outros.\n",
+        "\n",
+        "3. `quantstats.reports` - para gerar relatórios de métricas, assim como gerar planilhas que podem ser salvas em um arquivo HTML.\n",
+        "\n",
+        "Assim como fizemos com a biblioteca `yfinance`, é necessário proceder com a instalação manual da biblioteca no Colab."
+      ],
+      "metadata": {
+        "id": "d4Wv-8karYGr"
+      }
     }
   ]
 }
