--- a/55_Aulas_Bônus.ipynb
+++ b/55_Aulas_Bônus.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODyoj9HuOECGASK3IVsPzr",
+      "authorship_tag": "ABX9TyPbqxj7/KmWwpeEQZim+sX8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,24 @@
       ],
       "metadata": {
         "id": "9BI6h1XWAgjB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[Live do dia 29/12/2021](https://www.youtube.com/watch?v=XMhJiqOIn4A)"
+      ],
+      "metadata": {
+        "id": "FU1L1cg8A4sf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[Live do dia 05/01/2022](https://www.youtube.com/watch?v=lcISA5FKnOA)"
+      ],
+      "metadata": {
+        "id": "mca9wG6ABAuE"
       }
     },
     {
