--- a/55_Python_para_VFX_(Efeitos_Especiais).ipynb
+++ b/55_Python_para_VFX_(Efeitos_Especiais).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZF6+za9BIyPAbd4evk4+7",
+      "authorship_tag": "ABX9TyNX+wSzN8Aib7uP8gNOfqD5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,34 @@
       ],
       "metadata": {
         "id": "5SszsBk1BjRF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Python para VFX (Efeitos Especiais) e 3D\n",
+        "<small>*Material de apoio referente à aula Python para VFX da Escola de Data Science.*</small>\n",
+        "<br><br>\n",
+        "\n",
+        "\n",
+        "**A indústria audiovisual é uma indústria bilionária**, o que pode ser facilmente observado pelos valores investidos em filmes, seriados e jogos modernos.\n",
+        "\n",
+        "Incrivelmente, muitos profissionais de Ciência de Dados desconhecem esse mercado. Como você vai entender na aula, isso é um erro, uma vez que **os principais softwares usados no cinema, possuem algoritmos extremamente avançados e soluções de Visão Computacional e Deep Learning**, desenvolvidas pelos times de R&D das respectivas empresas.\n",
+        "\n",
+        "Ou seja, há equipes de cientistas e pesquisadores tentando acompanhar o **estado da arte em Inteligência Artificial** - o que também pode representar uma oportunidade.\n",
+        "\n",
+        "<img src=\"https://raw.githubusercontent.com/carlosfab/vfx-na-pratica/main/images//Screen Shot 2022-01-12 at 15.29.36.png\" width=600></center>\n",
+        "\n",
+        "Além disso, **Python é a linguagem utilizada no pipeline dos estúdios de VFX do mundo.** Softwares como Maya, Nuke, Cinema 4D e Houdini, possuem APIs nativas, que possibilizam a automação e criação de assets e efeitos diversos.\n",
+        "\n",
+        "## Visão Geral\n",
+        "\n",
+        "\"The Houdini Object Model (HOM) is an application programming interface (API) that lets you get information from and control Houdini using the Python scripting language. HOM replaces the functionality of Houdini’s previous command language, HScript.\"\n",
+        "\n",
+        "\"In Python, the hou package is the top of a hierarchy of modules, functions, and classes that define the HOM. The hou module is automatically imported when you are writing expressions in the parameter editor and in the hython command-line shell.\""
+      ],
+      "metadata": {
+        "id": "1Cy_WlpVCOJU"
       }
     },
     {
